--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,6 @@
     background: #A370F0;
     color: white;
     font-family: inherit;
-    padding: 0.35em;
-    padding-left: 1.2em;
     font-size: 17px;
     font-weight: 500;
     border-radius: 0.9em;
@@ -13,18 +11,18 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-shadow: inset 0 0 1.6em -0.6em #714da6;
-            box-shadow: inset 0 0 1.6em -0.6em #714da6;
+    box-shadow: inset 0 0 1.6em -0.6em #714da6;
     overflow: hidden;
     position: relative;
     height: 2.8em;
-    padding-right: 3.3em;
+    padding: 0.35em 3.3em 0.35em 1.2em;
     margin-top: 2rem;
-   }
-   
-   .cssbuttons-io-button .icon {
+}
+
+.cssbuttons-io-button .icon {
     background: white;
     margin-left: 1em;
     position: absolute;
@@ -32,58 +30,53 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     height: 2.2em;
     width: 2.2em;
     border-radius: 0.7em;
     -webkit-box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
-            box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+    box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
     right: 0.3em;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
-   }
-   
-   .cssbuttons-io-button:hover .icon {
+}
+
+.cssbuttons-io-button:hover .icon {
     width: calc(100% - 0.6em);
-   }
-   
-   .cssbuttons-io-button .icon svg {
+}
+
+.cssbuttons-io-button .icon svg {
     width: 1.1em;
     -webkit-transition: -webkit-transform 0.3s;
     transition: -webkit-transform 0.3s;
-    transition: transform 0.3s;
     transition: transform 0.3s, -webkit-transform 0.3s;
     color: #7b52b9;
-   }
-   
-   .cssbuttons-io-button:hover .icon svg {
+}
+
+.cssbuttons-io-button:hover .icon svg {
     -webkit-transform: translateX(0.1em);
-        -ms-transform: translateX(0.1em);
-            transform: translateX(0.1em);
-   }
-   
-   .cssbuttons-io-button:active .icon {
+    -ms-transform: translateX(0.1em);
+    transform: translateX(0.1em);
+}
+
+.cssbuttons-io-button:active .icon {
     -webkit-transform: scale(0.95);
-        -ms-transform: scale(0.95);
-            transform: scale(0.95);
-   }
-   
+    -ms-transform: scale(0.95);
+    transform: scale(0.95);
+}
 
 
-
-
-
-
-   .isDisabled {
-    pointer-events:none;
+.isDisabled {
+    pointer-events: none;
     opacity: 0.5;
-  }
-#root ~ div{
+}
+
+#root ~ div {
     display: none !important;
     opacity: 0 !important;
-    visibility: hidden!important;
-  }
+    visibility: hidden !important;
+}
